<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mary.utotal.MainActivity">

    <TextView
        android:id="@+id/messageOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_light"
        android:elevation="0dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="casual"
        android:onClick="check"
        android:text="@string/check"
        android:textColor="#434343"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />


    <Button
        android:id="@+id/scanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="68dp"
        android:background="@android:color/holo_green_dark"
        android:elevation="0dp"
        android:fontFamily="casual"
        android:onClick="scanBarcode"
        android:text="@string/scan"
        android:textAlignment="center"
        android:textColor="#434343"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exit" />

    <TextView
        android:id="@+id/nameOutput"
        android:layout_width="232dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="104dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scanBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="30dp"
        android:background="#e8512f"
        android:elevation="1dp"
        android:fontFamily="casual"
        android:onClick="exit"
        android:text="@string/exit"
        android:textColor="#434343"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scanBtn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
